add_executable(eindopdracht
        main.cpp
        nostd/Random.h
        nostd/String.cpp
        nostd/String.h
        nostd/Array.h
        FileReader.cpp
        FileReader.h
        nostd/IOHandler.h
        Ship.h
        Cannon.h
        nostd/Range.h
        Cargo.h
        Game.cpp
        Game.h
        Player.h
        Port.cpp
        Port.h
        Factory/PortFactory.cpp
        Factory/PortFactory.h
        exceptions/PortNotFoundException.h
        StateManager.h
        StateManager.cpp
        BaseState.h
        nostd/Stack.h
        DockedState.h
        DockedState.cpp
        SailingState.h
        SailingState.cpp
        FightingState.cpp
        FightingState.h
        Factory/Factory.h
        Factory/ShipFactory.cpp
        Factory/ShipFactory.h
        exceptions/OutOfFileException.h)